# fabric-admin-console

./: .env.template  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: python-ci.yml
specs/: 0001-public-roadmap.md  0002-deployment-workflows.md  0003-semantic-model-workflows.md  0004-workspace-git-utilities.md
src/fabric_admin_console/: __init__.py  __main__.py  admin_console.py  capacity_metrics.py  config.py  fabric_client.py
tests/: test_admin_console_helpers.py  test_capacity_metrics.py  test_config.py  test_fabric_client.py  test_main_module.py
